--- a/ft_transcendence.css
+++ b/ft_transcendence.css
@@ -1,9 +1,3 @@
-body
-{
-	font-family: system-ui;
-	margin: 0;
-}
-
 .about-container
 {
 	background-color: black;
@@ -20,6 +14,12 @@ body
 	position: fixed;
 	top: 50%;
 	transform: translate(0, -50%);
+}
+
+.content
+{
+	background-color: red;
+	height: 100%;
 }
 
 .form-container
@@ -95,25 +95,26 @@ body
 	padding-top: 1rem;
 }
 
-.navbar-content
+.navbar-button
 {
-	margin: auto;
-	width: 90rem;
-}
-
-.navbar-content a
-{
-	float: left;
 	font-size: 1rem;
 	text-align: center;
 	padding: 1rem;
 }
 
-.navbar-content a:hover
+.navbar-button:hover
 {
 	background-color: white;
 	color: black;
 	cursor: pointer;
+}
+
+.navbar-content
+{
+	display: flex;
+	margin: auto;
+	padding: 1rem;
+	width: 90rem;
 }
 
 .title
@@ -125,4 +126,18 @@ body
 {
 	font-size: 1rem;
 	text-align: center;
+}
+
+body
+{
+	display: flex;
+	flex-flow: column;
+	font-family: system-ui;
+	height: 100%;
+	margin: 0;
+}
+
+html
+{
+	height: 100%;
 }
