--- a/ft_transcendence.css
+++ b/ft_transcendence.css
@@ -1,27 +1,7 @@
 .about-blurb
 {
 	margin: 1rem;
-}
-
-.about-container
-{
-	background-color: #eff0f1;
-	border: 1px solid #bcbbbd;
-	border-radius: 3px;
-	color: black;
-	filter: drop-shadow(black 0.5rem 0.5rem 1rem);
-	padding: 4px;
-	text-align: center;
-	width: 50rem;
-}
-
-.about-popup
-{
-	display: block;
-	left: calc(100vw/2 - 25rem);
-	position: fixed;
-	top: 50%;
-	transform: translate(100vw, -50%);
+	max-width: 50rem;
 }
 
 .btn
@@ -35,8 +15,8 @@
 	height: 30px;
 	margin: 4px;
 	transition: border-color 0.25s ease-out;
-	width: -webkit-fill-available;
-	width: -moz-available;
+	white-space: nowrap;
+	width: min-content;
 }
 
 .btn:active
@@ -55,6 +35,44 @@
 .btn:hover
 {
 	border-color: #00b0ef;
+}
+
+.column
+{
+	display: flex;
+	flex-flow: column;
+}
+
+.container
+{
+	background-color: #eff0f1;
+	border: 1px solid #bcbbbd;
+	border-radius: 3px;
+	color: black;
+	display: flex;
+	flex-flow: column;
+	filter: drop-shadow(black 0.5rem 0.5rem 1rem);
+	padding: 4px;
+	text-align: center;
+}
+
+.container input[type=text], .container input[type=password]
+{
+	background-color: #fcfcfc;
+	border: 1px solid #bcbbbd;
+	border-radius: 3px;
+	box-sizing: border-box;
+	color: black;
+	height: 30px;
+	margin: 4px;
+	width: 100%;
+}
+
+.container input[type=text]:hover, .container input[type=password]:hover, .container input[type=text]:focus, .container input[type=password]:focus
+{
+	border-color: #00b0ef;
+	outline: none;
+	transition: border-color 0.25s ease-out;
 }
 
 .content
@@ -84,47 +102,8 @@
 .label
 {
 	margin: auto 0;
-}
-
-.login-container
-{
-	background-color: #eff0f1;
-	border: 1px solid #bcbbbd;
-	border-radius: 3px;
-	color: black;
-	display: flex;
-	flex-flow: column;
-	filter: drop-shadow(black 0.5rem 0.5rem 1rem);
-	padding: 4px;
-	width: 20rem;
-}
-
-.login-container input[type=text], .login-container input[type=password]
-{
-	background-color: #fcfcfc;
-	border: 1px solid #bcbbbd;
-	border-radius: 3px;
-	box-sizing: border-box;
-	color: black;
-	height: 30px;
-	margin: 4px;
-	width: 100%;
-}
-
-.login-container input[type=text]:hover, .login-container input[type=password]:hover, .login-container input[type=text]:focus, .login-container input[type=password]:focus
-{
-	border-color: #00b0ef;
-	outline: none;
-	transition: border-color 0.25s ease-out;
-}
-
-.login-popup
-{
-	display: block;
-	left: calc(100vw/2 - 10rem);
-	position: fixed;
-	top: 50%;
-	transform: translate(100vw, -50%);
+	text-align: right;
+	white-space: nowrap;
 }
 
 .logo
@@ -166,9 +145,25 @@
 	width: 90rem;
 }
 
+.popup
+{
+	display: block;
+	left: 50%;
+	position: fixed;
+	top: 50%;
+	transform: translate(100vw, -50%);
+}
+
+.popup-label
+{
+	margin: 4px;
+	text-align: left;
+}
+
 .row
 {
 	display: flex;
+	margin-left: auto;
 }
 
 .subtitle
