--- a/ft_transcendence.css
+++ b/ft_transcendence.css
@@ -1,9 +1,3 @@
-.about-blurb
-{
-	margin: 1rem;
-	max-width: 50rem;
-}
-
 .btn
 {
 	background-color: #fcfcfc;
@@ -106,6 +100,12 @@
 	width: 22px;
 }
 
+.inline-img
+{
+	margin: auto;
+	max-height: 25rem;
+}
+
 .label
 {
 	margin: auto 0;
@@ -174,6 +174,7 @@
 	border-bottom-right-radius: 3px;
 	border-top-right-radius: 3px;
 	display: none;
+	max-height: 50rem;
 	max-width: 50rem;
 	padding: 4px;
 	position: relative;
