--- a/ft_transcendence.css
+++ b/ft_transcendence.css
@@ -95,7 +95,7 @@
 
 .content
 {
-	background-color: white;
+	background-color: #eff0f1;
 	display: flex;
 	height: 100%;
 	transition: filter 0.25s ease-out;
@@ -103,8 +103,10 @@
 
 .content-body
 {
-	background-color: #eeeeee;
-	margin: 1rem auto;
+	background-color: #ffffff;
+	border: 1px solid #bcbbbd;
+	border-radius: 3px;
+	margin: 4px auto;
 	width: 90rem;
 }
 
@@ -155,6 +157,7 @@
 .row
 {
 	display: flex;
+	width: 100%;
 }
 
 .spacer
