--- a/ft_transcendence.css
+++ b/ft_transcendence.css
@@ -83,6 +83,7 @@
 	color: black;
 	height: 30px;
 	margin: 4px;
+	padding: 4px;
 	width: 100%;
 }
 
@@ -134,6 +135,7 @@
 
 .label
 {
+	cursor: default;
 	margin: auto 0;
 	text-align: right;
 	white-space: nowrap;
@@ -171,6 +173,7 @@
 	border-bottom: none;
 	border-color: transparent;
 	border-top-width: 3px;
+	cursor: default;
 	display: inline-block;
 	padding: 4px;
 	transition: background-color 0.25s ease-out, border-color 0.25s ease-out;
@@ -185,7 +188,7 @@
 .tab.active
 {
 	background-color: #f4f5f5 !important;
-	border-color: #c7c8c9 !important;
+	border-color: #bcbebf !important;
 	border-top-color: #00b0ef !important;
 	border-top-left-radius: 3px;
 	border-top-right-radius: 3px;
@@ -237,15 +240,14 @@
 	border-bottom: 1px solid #aeb2b4;
 	color: black;
 	filter: drop-shadow(0 1px #d1d2d3);
-	height: 45px;
-	overflow: hidden;
+	transition: filter 0.25s ease-out;
 }
 
 .toolbar-content
 {
 	display: flex;
 	margin: auto;
-	width: 90rem;
+	max-width: 90rem;
 }
 
 body
