--- a/srcs/requirements/django/ft_transcendence/newyear/templates/newyear/index.html
+++ b/srcs/requirements/django/ft_transcendence/newyear/templates/newyear/index.html
@@ -6,9 +6,9 @@
 	</head>
 	<body>
 		{% if newyear %}
-		<h1>EILLE LA CHARUE</h1>
+		<h1>YES</h1>
 		{% else %}
-		<h1>CEST PAS LE JOUR DE L'AN GROSSE TRUIE</h1>
+		<h1>NO</h1>
 		{% endif %}
 	</body>
 </html>
